--- a/app/src/main/res/layout/fragment_find_station.xml
+++ b/app/src/main/res/layout/fragment_find_station.xml
@@ -10,7 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="100dp"
         android:fontFamily="@font/bebas_neue"
         android:includeFontPadding="false"
@@ -23,14 +23,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/editTextFindStationName"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="41dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:ems="10"
-        android:hint="@string/search_area"
+        android:hint="@android:string/search_go"
         android:inputType="text"
         app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,16 +38,42 @@
 
     <Button
         android:id="@+id/buttonSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="56dp"
+        android:layout_height="48dp"
         android:layout_marginEnd="25dp"
         android:background="#673AB7"
         android:paddingBottom="2dp"
-        android:text="Search"
         app:barrierMargin="2dp"
         app:icon="@drawable/baseline_search_24"
-        app:layout_constraintBottom_toBottomOf="@+id/editTextText"
+        app:layout_constraintBottom_toBottomOf="@+id/editTextFindStationName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editTextText"
-        app:layout_constraintTop_toTopOf="@+id/editTextText" />
+        app:layout_constraintTop_toTopOf="@+id/editTextFindStationName" />
+
+    <Button
+        android:id="@+id/buttonSearchOnCar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/search_by_car"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewUserCar"
+        app:layout_constraintEnd_toEndOf="@+id/buttonSearch"
+        app:layout_constraintTop_toTopOf="@+id/textViewUserCar" />
+
+    <TextView
+        android:id="@+id/textViewUserCar"
+        android:layout_width="203dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toStartOf="@+id/buttonSearchOnCar"
+        app:layout_constraintStart_toStartOf="@+id/editTextFindStationName"
+        app:layout_constraintTop_toBottomOf="@+id/editTextFindStationName" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewStation"
+        android:layout_width="360dp"
+        android:layout_height="494dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/buttonSearchOnCar"
+        app:layout_constraintStart_toStartOf="@+id/textViewUserCar"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSearchOnCar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
